# rust-by-example

./: .gitignore
src/1-hello/: debug.rs  display-list.rs  display.rs  formatted-print.rs  hello.rs
src/10-modules/: struct-visibility.rs  visibility.rs
src/11-crates/: creating-library.rs  using-library.rs
src/13-attributes/: attributes.rs  cfg.rs  custom-cfg.rs
src/14-generics/: associated-types.rs  bounds.rs  functions.rs  generics.rs  implementation.rs  multiple-bounds.rs  new-type-idiom.rs  phantom-type-parameters.rs
src/15-scoping-rules/: aliasing.rs  borrowing-mutability.rs  borrowing.rs  mutability.rs  ownership-move.rs  partial-move.rs  raii.rs  ref-pattern.rs
src/16-traits/: clone.rs  derive.rs  disambiguating-overlaping.rs  drop.rs  dyn.rs  impl-trait.rs  iterators.rs  operator-overloading.rs  supertraits.rs  traits.rs
src/17-macro-rules/: designators.rs  dry.rs  dsl.rs  macro-rules.rs  overload.rs  repeat.rs  variadic.rs
src/18-error-handling/: abort-unwind.rs  combinators-map.rs  iterating-over-results.rs  panic.rs
src/19-std-library-types/: arc.rs  box-stack-heap.rs  hashmap.rs  hashset.rs  option.rs  panic.rs  rc.rs  result.rs  strings.rs  vectors.rs
src/2-primitives/: array-slices.rs  litterals-operators.rs  primitives.rs  tuples.rs
src/20-std-misc/: channels.rs  filesystem-opterations.rs  foreign-function-interface.rs  path.rs
src/21-testing/: Cargo.toml
src/21-testing/src/: lib.rs
src/21-testing/tests/: integration_test.rs
src/21-testing/tests/common/: mod.rs
src/22-unsafe-operations/: inline-assembly.rs  unsafe-operations.rs
(+68 files in other folders)
